# pdf-merge

./: Cargo.toml  README.md
docs/: CHANGELOG.md  PLAN.md  PROJECT_STRUCTURE.md  README.md  TUI_DESIGN.md
src/: cli.rs  main.rs  merge.rs  progress.rs  scan.rs  split.rs
src/tui/: mod.rs  theme.rs
tests/: integration.rs
