[package]
name = "pdf-ops"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2"
clap = {version="4", features=["derive"]}
lopdf = "0.32"
thiserror = "1"
globset = "0.4"
anyhow = "1"
indicatif = "0.17"
[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
[features]
default = []
tui = ["dep:ratatui", "dep:crossterm"]

[dependencies.ratatui]
version = "0.26"
optional = true

[dependencies.crossterm]
version = "0.27"
optional = true
